UtahLiveDataTest/src/objects/FormBudgetInformation__c.object
<CustomObject>
    <description>[Business] This object is used for Budget Information forms.</description>
    <fields>
        <fullName>Activity1__c</fullName>
        <label>Activity1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Activity2__c</fullName>
        <label>Activity2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Activity3__c</fullName>
        <label>Activity3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Amount1__c</fullName>
        <label>Costs Not Allowable for Participation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applicant__c</fullName>
        <label>Applicant</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipName>Application</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CategoryName__c</fullName>
        <label>Category Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency1__c</fullName>
        <description>This field is used in Budget Information for Construction form as Currency 1 , Budget Information for Non Construction form as : Currency 1 in Budget Summary section , Currency 1 in Budget Categories, Currency 1 in Non Federal Resources, Currency 1 in Forecasted Cash Needs, Currency 1 in Budget Estimates.</description>
        <label>Currency1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Currency2__c</fullName>
        <description>This field is used in Budget Information for Construction form as Currency 2 , Budget Information for Non Construction form as : Currency 2 in Budget Summary section , Currency 2 in Budget Categories, Currency 2 in Non Federal Resources, Currency 2 in Forecasted Cash Needs, Currency 2 in Budget Estimates.</description>
        <label>Currency2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Currency3__c</fullName>
        <description>This field is used in Budget Information for Non Construction form as : Currency 3 in Budget Summary section , Currency 3 in Budget Categories, Currency 3 in Non Federal Resources, Currency 3 in Forecasted Cash Needs, Currency 3 in Budget Estimates.</description>
        <label>Currency 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>This field is used in Budget Information for Construction form as Description, Budget Information for Non Construction form as Description under Forecasted Cash Needs.</description>
        <label>Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Administrative and legal expenses</fullName>
                </value>
                <value>
                    <fullName>Land, structures, rights-of-way, appraisals, etc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FDANumber__c</fullName>
        <description>This field is used in Budget Information for Non Construction form as FDA Number in Budget Summary Section.</description>
        <label>FDA Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FederalAssistanceRequested__c</fullName>
        <label>Federal Assistance Requested</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form</label>
        <referenceTo>Form__c</referenceTo>
        <relationshipName>Budget_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GrantProgramFunctionOrActivity__c</fullName>
        <description>This field is used in Budget Information for Non Construction form as : Grant Program Function or Activity in Budget Summary section , Currency 1 in Non Federal Resources, Grant Program Function or Activity in Non Federal Resources, Grant Program Function or Activity in Budget Estimates.</description>
        <label>Grant Program Function or Activity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectClassCategories__c</fullName>
        <description>This field is used in Budget Information for Non Construction Programs as Object Class Categories in Budget Categories Section.</description>
        <label>Object Class Categories</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>a. Personnel</fullName>
                </value>
                <value>
                    <fullName>b. Fringe Benefits</fullName>
                </value>
                <value>
                    <fullName>c. Travel</fullName>
                </value>
                <value>
                    <fullName>d. Equipment</fullName>
                </value>
                <value>
                    <fullName>e. Supplies</fullName>
                </value>
                <value>
                    <fullName>f. Contractual</fullName>
                </value>
                <value>
                    <fullName>g. Construction</fullName>
                </value>
                <value>
                    <fullName>h. Other</fullName>
                </value>
                <value>
                    <fullName>j. Indirect Charges</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RowNumber1__c</fullName>
        <description>This field is used in Budget Information for Construction form, Budget Information for Non Construction form</description>
        <label>Row Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalAllowableCosts__c</fullName>
        <formula>Amount__c -  Amount1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Allowable Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>Currency1__c + Currency2__c +  Currency3__c + Currency4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Application Overflow Budget Information</label>
    <nameField>
        <displayFormat>BI-{00000}</displayFormat>
        <label>Budget Information</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Overflow Budget Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>